kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dhaka-celsius
  labels:
    name: dhaka-celsius
